--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
 [build]
   publish = "public"
+
+[[redirects]]
+  from = "/api/*"
+  to = "http://<vm-ip>:3000/:splat"
+  status = 200
+  force = true
